added one-second thread termination, advanced garbage collection, java 8 enhancements